--- a/index.html
+++ b/index.html
@@ -1,202 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f2f2f2;
+            font-family: Arial, sans-serif;
+            text-align: center;
             margin: 0;
+            padding: 0;
+            background-image: url('re.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh;
         }
 
-        .game-container {
-            text-align: center;
-            background-color: #fff;
+        #dialog {
+            background-color: rgba(255, 255, 255, 0.8);
+            border: 1px solid #ccc;
+            max-width: 400px;
+            display: inline-block;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        #imgContainer {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+
+        img {
+            max-width: 100px;
+            border-radius: 50%;
+            border: 2px solid #ddd;
         }
 
         button {
             padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-
-        .dialog-container {
             margin-top: 20px;
-            text-align: left;
-            max-width: 400px;
-            margin: auto;
+            cursor: pointer;
+            font-size: 16px;
         }
 
-        .dialog {
-            background-color: #f2f2f2;
-            border-radius: 8px;
-            padding: 10px;
-            margin-bottom: 10px;
+        #result {
+            margin-top: 20px;
+            font-size: 18px;
+        }
+
+        #win,
+        #gameOver {
+            display: none;
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
         }
     </style>
-    <title>Hotel Adventure</title>
+    <title>Reception Check-In Game</title>
 </head>
+
 <body>
-    <div class="game-container">
-        <h1>Welcome to the Hotel Adventure!</h1>
-        <div id="output" class="dialog-container"></div>
+    <div id="dialog">
+        <div id="imgContainer">
+            <img id="diegoImg" src="b.jpg" alt="Diego">
+            <img id="marshaImg" src="m.jpg" alt="Marsha">
+            <img id="ahmedImg" src="a.jpg" alt="Ahmed">
+        </div>
+        <div id="result"></div>
         <button onclick="startGame()">Start Check-In</button>
     </div>
+
+    <div id="win">Congratulations! You have successfully checked in!</div>
+    <div id="gameOver">Game Over! Better luck next time.</div>
+
     <script>
-        const characters = {
-            user: "You",
-            ahmed: { name: "Ahmed", picture: "a.jpg" },
-            diego: { name: "Diego", picture: "b.jpg" },
-            marsha: { name: "Marsha", picture: "m.jpg" },
-        };
+        let chosenRoom = '';
 
-        const dialogues = {
-            ahmed: [
-                "Welcome to the hotel! I'm Ahmed, your concierge. How can I assist you today?",
-                "Is everything going smoothly? Let me know if you need anything!",
-                "If you have any questions, feel free to ask. Enjoy your stay!"
-            ],
-            diego: [
-                "Hello there! I'm Diego, the receptionist. Ready for check-in?",
-                "Need any information about the hotel facilities? Just ask!",
-                "If you have any issues, don't hesitate to let me know. I'm here to help!"
-            ],
-            marsha: [
-                "Hi, I'm Marsha, the duty manager. How's your day going?",
-                "If you have any special requests, feel free to share them with me.",
-                "Enjoy your time at our hotel! If you need assistance, I'm here for you."
-            ]
-        };
-
-        function getRandomCharacter() {
-            const characterKeys = Object.keys(characters);
-            const randomKey = characterKeys[Math.floor(Math.random() * characterKeys.length)];
-            return randomKey;
+        function startGame() {
+            showImage('diegoImg');
+            showResult("Hello! I'm Diego, the receptionist. Welcome to our hotel!");
+            setTimeout(() => {
+                showResult("To begin, please choose a room type:");
+                showRoomOptions();
+            }, 3000);
         }
 
-        function getRandomDialogue(character) {
-            const characterDialogues = dialogues[character.toLowerCase()];
-            const randomIndex = Math.floor(Math.random() * characterDialogues.length);
-            return characterDialogues[randomIndex];
+        function showRoomOptions() {
+            document.getElementById('result').innerHTML = `
+                <button onclick="chooseRoom('DKB')">DKB Room</button>
+                <button onclick="chooseRoom('DDB')">DDB Room</button>
+                <button onclick="chooseRoom('DB')">DB Room</button>
+                <button onclick="chooseRoom('TB')">TB Room</button>
+                <button onclick="chooseRoom('KB')">KB Room</button>
+            `;
         }
 
-        function displayImage(character) {
-            const imageContainer = document.getElementById('output');
-            const image = document.createElement('img');
-            image.src = characters[character]?.picture || 'placeholder.jpg';
-            image.alt = character;
-            imageContainer.innerHTML = '';
-            imageContainer.appendChild(image);
+        function chooseRoom(roomType) {
+            chosenRoom = roomType;
+            showImage('diegoImg');
+            showResult(`You chose ${roomType} room. Now, let's proceed with the check-in process.`);
+            setTimeout(() => {
+                talkToMarsha();
+            }, 3000);
         }
 
-        function showDialog(character, message) {
-            const output = document.getElementById('output');
-            const dialog = document.createElement('div');
-            dialog.classList.add('dialog');
-            dialog.textContent = `${characters[character]?.name || character}: ${message}`;
-            output.appendChild(dialog);
-        }
-
-        function sleep(ms) {
-            return new Promise(resolve => setTimeout(resolve, ms));
-        }
-
-        async function startGame() {
-            const userCharacter = characters.user.toLowerCase();
-
-            const targetCharacter = getRandomCharacter();
-            showDialog(userCharacter, "Welcome to our hotel! You are here for check-in.");
-
-            let welcomeDisplayed = true; // Flag to track whether the welcome message is already displayed
-
-            const interactions = {
-                diego: { prompt: false, dkb: false, ddb: false },
-                ahmed: { wait: false },
-                marsha: { upgrade: false }
-            };
-
-            for (let i = 0; i < 10; i++) {
-                const currentCharacter = getRandomCharacter();
-                if (welcomeDisplayed) {
-                    displayImage(currentCharacter.toLowerCase());
-                    welcomeDisplayed = false;
-                }
-
-                const dialogue = getRandomDialogue(currentCharacter);
-                showDialog(currentCharacter, dialogue);
-
-                if (currentCharacter.toLowerCase() === targetCharacter) {
-                    // Check if the character is Marsha, Ahmed, or Diego
-                    if (currentCharacter.toLowerCase() === 'diego') {
-                        if (!interactions.diego.prompt) {
-                            const answer = prompt("Diego: Would you like a DKB (Double King Bed) or DDB (Double Double Bed)?").toLowerCase();
-                            interactions.diego.prompt = true;
-
-                            if (answer === 'dkb') {
-                                interactions.diego.dkb = true;
-                                showDialog(userCharacter, "Diego: I'm sorry, but we currently don't have availability for DKB.");
-                                interactions.ahmed.wait = true;
-                                showDialog('ahmed', "Ahmed: Please have a seat in our waiting area. Marsha will assist you shortly.");
-                                break;
-                            } else if (answer === 'ddb') {
-                                interactions.diego.ddb = true;
-                                                            showDialog(userCharacter, "Diego: Great choice! You've selected DDB. Your room key for 308 is ready.");
-                                showDialog('marsha', "Marsha: Hello! I heard you've chosen DDB. Here's your complimentary upgrade to a deluxe suite. Enjoy your stay!");
-                                interactions.marsha.upgrade = true;
-                                showDialog('ahmed', "Ahmed: If you have any further requests or questions, feel free to ask. Have a wonderful stay!");
-                                break;
-                            } else {
-                                showDialog(userCharacter, "Diego: I'm sorry, I didn't understand your choice. Please choose either DKB or DDB.");
-                            }
-                        } else {
-                            showDialog(userCharacter, "Diego: How may I assist you further?");
-                        }
-                    } else if (currentCharacter.toLowerCase() === 'ahmed') {
-                        if (interactions.ahmed.wait) {
-                            showDialog('ahmed', "Ahmed: Please have a seat in our waiting area. Marsha will assist you shortly.");
-                            break;
-                        } else {
-                            showDialog('ahmed', "Ahmed: How can I assist you today? If you have any requests or questions, feel free to ask.");
-                        }
-                    } else if (currentCharacter.toLowerCase() === 'marsha') {
-                        if (interactions.marsha.upgrade) {
-                            showDialog('marsha', "Marsha: I hope you enjoy the complimentary upgrade. If you need anything else, let me know.");
-                            break;
-                        } else {
-                            showDialog('marsha', "Marsha: How's your day going? If you have any special requests, feel free to share them with me.");
-                        }
+        function talkToMarsha() {
+            showImage('marshaImg');
+            showResult("Hello! I'm Marsha, the duty manager. Welcome to our hotel!");
+            setTimeout(() => {
+                showResult(`I see you've chosen a ${chosenRoom} room. Now, let me check the availability.`);
+                setTimeout(() => {
+                    if (Math.random() < 0.7) {
+                        showResult(`Great news! The ${chosenRoom} room is available.`);
+                        setTimeout(() => {
+                            askAdditionalService();
+                        }, 3000);
                     } else {
-                        showDialog(userCharacter, "You found the right person! Check-in successful. You win!");
-                        return;
+                        gameOver();
                     }
-                } else {
-                    if (i === 9) {
-                        showDialog(userCharacter, "You couldn't find the right person. Check-in unsuccessful. You lose!");
-                        return;
-                    } else {
-                        showDialog(currentCharacter, "Sorry, wrong person. Keep looking for the right team!");
-                    }
-                }
+                }, 3000);
+            }, 3000);
+        }
 
-                await sleep(2000);
+        function askAdditionalService() {
+            showImage('marshaImg');
+            showResult("Is there anything else you would like assistance with during your stay?");
+            setTimeout(() => {
+                showResult("Feel free to ask about local attractions, dining recommendations, or any special requests.");
+                setTimeout(() => {
+                    marshaPrompt();
+                }, 3000);
+            }, 3000);
+        }
+
+        function marshaPrompt() {
+            showImage('marshaImg');
+            showResult("Additionally, would you need assistance with your luggage?");
+            setTimeout(() => {
+                document.getElementById('result').innerHTML = `
+                    <button onclick="acceptLuggage()">Yes, please help with my luggage</button>
+                    <button onclick="continueWithoutLuggage()">No, I'm good with my luggage</button>
+                `;
+            }, 3000);
+        }
+
+        function acceptLuggage() {
+            showImage('marshaImg');
+            showResult("Certainly! Our staff will assist you with your luggage.");
+            setTimeout(() => {
+                showResult("Is there anything else you would like assistance with?");
+                setTimeout(() => {
+                    ahmedPrompt();
+                }, 3000);
+            }, 3000);
+        }
+
+        function continueWithoutLuggage() {
+            showImage('marshaImg');
+            showResult("Sure! If you need any assistance later, feel free to ask. Enjoy your stay!");
+            setTimeout(() => {
+                showResult("Is there anything else you would like assistance with?");
+                setTimeout(() => {
+                    ahmedPrompt();
+                }, 3000);
+            }, 3000);
+        }
+
+        function ahmedPrompt() {
+            showImage('ahmedImg');
+            showResult("Hi there! I'm Ahmed, the concierge. Is there anything specific you'd like to know or any assistance you need?");
+            setTimeout(() => {
+                showResult("Additionally, would you like us to arrange a cab for you?");
+                setTimeout(() => {
+                    document.getElementById('result').innerHTML = `
+                        <button onclick="arrangeCab()">Yes, arrange a cab</button>
+                        <button onclick="finishCheckIn()">No, I'm good</button>
+                    `;
+                }, 3000);
+            }, 3000);
+        }
+
+        function arrangeCab() {
+            showResult("Great! We'll arrange a cab for you. Enjoy your stay!");
+            setTimeout(() => {
+                win();
+            }, 3000);
+        }
+
+        function finishCheckIn() {
+            showResult("Okay! If you need any assistance later, feel free to ask. Enjoy your stay!");
+            setTimeout(() => {
+                win();
+            }, 3000);
+        }
+
+        function showResult(message) {
+            document.getElementById('result').innerHTML = message;
+        }
+
+        function showImage(imgId) {
+            const imgElement = document.getElementById(imgId);
+            if (imgElement) {
+                const imgContainer = document.getElementById('imgContainer');
+                imgContainer.innerHTML = ''; // Clear previous images
+                const img = document.createElement('img');
+                img.src = imgElement.src;
+                img.alt = imgId;
+                imgContainer.appendChild(img);
             }
+        }
+
+        function win() {
+            document.getElementById('dialog').style.display = 'none';
+            document.getElementById('win').style.display = 'block';
+        }
+
+        function gameOver() {
+            document.getElementById('dialog').style.display = 'none';
+            document.getElementById('gameOver').style.display = 'block';
         }
     </script>
 </body>
-</html>
 
+</html>
